name:                Yggdrasil
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            redacted
license:             BSD3
license-file:        LICENSE
author:              REDACTED
maintainer:          redacted@.co.uk
copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


executable Yggdrasil
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       ListLike,
                       amqp >= 0.15.1,
                       base >= 4.7 && < 5,
                       bytestring >= 0.10.8.1,
                       config-ini,
                       containers >= 0.5.9.2,
                       directory >= 1.3.0.0,
                       io-streams >= 1.4.1.0,
                       megaparsec >= 5.3.0,
                       monad-parallel,
                       mysql-haskell >= 0.8.0.0,
                       strict,
                       text == 1.2.2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
